# Milestones

m1/: Milestone_1.cpp  Task.h  Utilities.h
m1_submission/: CMakeLists.txt  Task.cpp  mainpage.txt
m1_submission/solutions/: clean_with_whitespace_solution.txt
m2/: CMakeLists.txt  Item.h  Milestone_1.cpp  Milestone_2.cpp  Task.cpp  Utilities.h
m2/solutions/: clean_with_whitespace_solution.txt  robust_solution.txt
m3/: CMakeLists.txt  CustomerItem.cpp  CustomerItem.h  CustomerOrder.h  ItemManager.cpp  ItemManager.h  Milestone_3.cpp  OrderManager.cpp  OrderManager.h  TaskManager.cpp  TaskManager.h  Utilities.cpp
submissions/m1_submission/code/: Task.h  Utilities.cpp
submissions/m1_submission/interface_documentation/: Doxyfile
submissions/m1_submission/script_files/: clean_solution.txt
submissions/m2_submission/code/: CustomerOrder.cpp  Item.cpp  Task.h
submissions/m2_submission/script_files/: robust_solution.txt
